==> SaeedNowroozi/Stm32f4/L6470.c <==
#include "L6470.h"
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>
#include "delay.h"
#include "spi_l6470.h"

void init(){
	// This is the generic initialization function to set up the Arduino to
	//  communicate with the dSPIN chip. 

	// set up the input/output pins for the application.
//***	pinMode(10, OUTPUT);  // The SPI peripheral REQUIRES the hardware SS pin-
	                      //  pin 10- to be an output. This is in here just
	                      //  in case some future user makes something other
	                      //  than pin 10 the SS pin.
	//__delay(10000);                      
//***	pinMode(_SSPin, OUTPUT);
//***	digitalWrite(_SSPin, HIGH);
//***	pinMode(MOSI, OUTPUT);
//***	pinMode(MISO, INPUT);
//***	pinMode(SCK, OUTPUT);
//***	pinMode(BUSYN, INPUT);
//***	pinMode(RESET, OUTPUT);
	//__init_spi();
	//GPIO_SetBits(GPIOA, GPIO_Pin_4);
	// reset the dSPIN chip. This could also be accomplished by
	//  calling the "L6470::ResetDev()" function after SPI is initialized.
//***	digitalWrite(RESET, HIGH);
 __init_reset();
	GPIO_SetBits(GPIOD, GPIO_Pin_13);
	GPIO_ResetBits(GPIOD, GPIO_Pin_12);
//***	delay(10);
__delay(10);
//***	digitalWrite(RESET, LOW);
GPIO_ResetBits(GPIOD, GPIO_Pin_13);
//***	delay(10);
__delay(10);
//***	digitalWrite(RESET, HIGH);
GPIO_SetBits(GPIOD, GPIO_Pin_13);
//***	delay(10);
__delay(10);
	
	// initialize SPI for the dSPIN chip's needs:
	//  most significant bit first,
	//  SPI clock not to exceed 5MHz,
	//  SPI_MODE3 (clock idle high, latch data on rising edge of clock)  
//***	SPI.begin();
//***	SPI.setBitOrder(MSBFIRST);
//***	SPI.setClockDivider(SPI_CLOCK_DIV16); // or 2, 8, 16, 32, 64
//***	SPI.setDataMode(SPI_MODE3);
		 __init_spi();
		// __delay(15);
		// GPIO_SetBits(GPIOE, GPIO_Pin_3);
	// First things first: let's check communications. The CONFIG register should
	//  power up to 0x2E88, so we can use that to check the communications.
	//GetParam(CONFIG);
	if (GetParam(CONFIG) == 0x2E88){
			GPIO_ResetBits(GPIOD, GPIO_Pin_12);
	}else{

		GPIO_SetBits(GPIOD, GPIO_Pin_12);
	}

	// First, let's set the step mode register:
	//   - SYNC_EN controls whether the BUSY/SYNC pin reflects the step
	//     frequency or the BUSY status of the chip. We want it to be the BUSY
	//     status.
	//   - STEP_SEL_x is the microstepping rate- we'll go full step.
	//   - SYNC_SEL_x is the ratio of (micro)steps to toggles on the
	//     BUSY/SYNC pin (when that pin is used for SYNC). Make it 1:1, despite
	//     not using that pin.
	//SetParam(STEP_MODE, !SYNC_EN | STEP_SEL_1 | SYNC_SEL_1);
	__delay(1);
	
	SetParam(KVAL_RUN, 255);
	SetParam(KVAL_ACC, 255);
	SetParam(KVAL_DEC, 255);
	

	// Set up the CONFIG register as follows:
	//  PWM frequency divisor = 1
	//  PWM frequency multiplier = 2 (62.5kHz PWM frequency)
	//  Slew rate is 290V/us
	//  Do NOT shut down bridges on overcurrent
	//  Disable motor voltage compensation
	//  Hard stop on switch low
	//  16MHz internal oscillator, nothing on output
	SetParam(CONFIG, CONFIG_PWM_DIV_1 );  
	SetParam(CONFIG, CONFIG_PWM_MUL_2 );
  SetParam(CONFIG, CONFIG_SR_290V_us );
	SetParam(CONFIG, CONFIG_OC_SD_DISABLE );
	SetParam(CONFIG, CONFIG_VS_COMP_DISABLE );
	SetParam(CONFIG, CONFIG_SW_HARD_STOP );
	SetParam(CONFIG, CONFIG_INT_16MHZ );
	
	// Configure the RUN KVAL. This defines the duty cycle of the PWM of the bridges
	//  during running. 0xFF means that they are essentially NOT PWMed during run; this
	//  MAY result in more power being dissipated than you actually need for the task.
	//  Setting this value too low may result in failure to turn.
	//  There are ACC, DEC, and HOLD KVAL registers as well; you may need to play with
	//  those values to get acceptable performance for a given application.
	SetParam(KVAL_RUN, 0xFF);
	// Calling GetStatus() clears the UVLO bit in the status register, which is set by
	//  default on power-up. The driver may not run without that bit cleared by this
	//  read operation.
	
	getStatus();

	hardStop(); //engage motors
//  goTo(0x3FFFF0);
	//move(0x3FFFF0);
}

uint8_t Xfer(uint8_t data){
	// This simple function shifts a byte out over SPI and receives a byte over
	//  SPI. Unusually for SPI devices, the dSPIN requires a toggling of the
	//  CS (slaveSelect) pin after each byte sent. That makes this function
	//  a bit more reasonable, because we can include more functionality in it.
	uint8_t data_out;
	//***digitalWrite(_SSPin,LOW);
	GPIO_ResetBits(GPIOA, GPIO_Pin_4);
	// GPIO_WriteBit(GPIOA, GPIO_Pin_4, RESET);
	// SPI.transfer() both shifts a byte out on the MOSI pin AND receives a
	//  byte in on the MISO pin.
    data_out = Send_l6470(data);
//***	digitalWrite(_SSPin,HIGH);
  	GPIO_SetBits(GPIOA, GPIO_Pin_4);
	// GPIO_WriteBit(GPIOA, GPIO_Pin_4, SET);
	return data_out;
}
